--- a/vue/background-Original-2/package.json
+++ b/vue/background-Original-2/package.json
@@ -10,6 +10,7 @@
     "@aspnet/signalr": "^1.0.0",
     "abp-web-resources": "^3.8.2",
     "axios": "^0.18.0",
+    "element-ui": "^2.11.1",
     "famfamfam-flags": "^1.0.0",
     "iview": "~3.0.0",
     "js-cookie": "^2.2.0",
@@ -29,8 +30,8 @@
     "@vue/cli-service": "^3.0.4",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
-    "vue-template-compiler": "^2.5.17",
-    "typescript": "^3.0.0"
+    "typescript": "^3.0.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "babel": {
     "presets": [
